[package]
name = "nvrtc"
version = "0.1.2"
authors = ["Roman Koblov <penpen938@me.com>"]
edition = "2018"
build = "build.rs"
license = "MIT"
keywords = ["bindings", "cuda", "nvrtc", "gpu", "ptx"]
categories = ["api-bindings", "concurrency"]
repository = "https://github.com/romankoblov/rust-nvrtc"
homepage = "https://github.com/romankoblov/rust-nvrtc"
readme = "README.md"
description = "Bindings for NVIDIA® CUDA™ NVRTC in Rust"

[badges]
circle-ci = { repository = "romankoblov/rust-nvrtc", branch = "master" }

[build-dependencies]
bindgen = "~0.43"

